--- a/src/html5/css3.html
+++ b/src/html5/css3.html
@@ -35,7 +35,7 @@
     <div class="div6 container">
         
     </div>
-    <script type="text/javascript" src="../js/lib/jquery.js"></script>
+    <script type="text/javascript" src="../js/common/jquery.js"></script>
     <script type="text/javascript">
         var speed=9;/*reg/100ms*//*z转速*/
         function rotate(element,reg){
