--- a/src/index.html
+++ b/src/index.html
@@ -141,25 +141,25 @@
             <h2 class="sideTitle">功能列表</h3>
             <ul class="list ">
                 <li>
-                    <a href="">测试一</a>
+                    <a href="html5/test1.html" target="_blank">html5相关</a>
                 </li>
                 <li>
-                    <a href="">测试二</a>
+                    <a href="html5/css3.html" target="_blank">css3相关</a>
                 </li>
                 <li>
-                    <a href="">测试三</a>
+                    <a href="test2.html" target="_blank">节流函数</a>
                 </li>
                 <li>
-                    <a href="">测试四</a>
+                    <a href="">ajax测试</a>
                 </li>
                 <li>
-                    <a href="">测试四</a>
+                    <a href="background.html" target="_blank">布局相关</a>
                 </li>
                 <li>
-                    <a href="">测试四</a>
+                    <a href="">leanCloud相关</a>
                 </li>
                 <li>
-                    <a href="">测试四</a>
+                    <a href=""></a>
                 </li>
                 <li>
                     <a href="">测试四</a>
